2010-08-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #1728: Comma separated list don't accept spaces at "db_layout" in the 'addTables' feature (thanks to Niels Pardon)

2010-08-22  Francois Suter  <francois@typo3.org>

	* Fixed bug #14949: "View Item" does not resolve real MM-relations (thanks to Caspar Stuebs)

2010-08-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15514 Bugfix : wrong encoded confirm message in User Admin Module (Thanks to Sven Juergens)
	* Fixed bug #15507: Bug: MEDIA content element ignores stdWrap configuration (Thanks to Jigal van Hemert)

2010-08-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15505: t3lib_cache_backend_TransientMemoryBackend is not referenced

2010-08-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15494: fatal error in phpunit BE module

2010-08-13  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15450: [felogin] Spelling-error: "reseting" must be "resetting" (Thanks to Stefan Neufeind)

2010-08-13  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13662: rsaauth does not work with special characters in password (Thanks to Steffen Ritter)

2010-08-12  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #3819: t3lib_div::getIndpEnv('TYPO3_DOCUMENT_ROOT') delivers wrong value in Backend

2010-08-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15396: [scheduler] Wrong query - crashes with DBAL

2010-08-11  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15375: showDomainNameWithTitle doesn't respect hidden records (Thanks to Henrik Ziegenhain)

2010-08-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15393: [Caching framework] API usage: Make sure lifetime is NULL or integer
	* Fixed bug #15417: [Caching framework] DbBackend has() returns false for entries with unlimited lifetime

2010-08-11  Steffen Kamper  <steffen@typo3.org>
