@@ -1,3 +1,7 @@
+2010-08-28  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #15482: htmlArea RTE: Entering line breaks with Safari not possible in TYPO3 3.4.5 
+
 2010-07-27  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15121: htmlArea RTE: Javascript Error in IE7 prevent Link dialogue from opening
