@@ -1,3 +1,7 @@
+2010-08-28  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #15482: htmlArea RTE: Entering line breaks with Safari not possible in TYPO3 3.4.5 
+
 2010-08-27  Ernesto Baschny  <ernst@cron-it.de>
 
 	* Fixed bug #1728: Comma separated list don't accept spaces at "db_layout" in the 'addTables' feature (thanks to Niels Pardon)
